修改对下属组织的描述

--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -184,7 +184,7 @@
 其中 XSO 可以由 CEO 或 XEO 兼任。
 
 \hypertarget{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}{%
-\subsubsection{第十二条\quad委员会下属机构}\label{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}}
+\subsubsection{第十二条\quad委员会的下属机构}\label{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}}
 
 委员会下属机构是委员会的一部分。委员会下设技术部、运营部、信宣部。
 
@@ -266,7 +266,7 @@
 \hypertarget{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}{%
 \subsubsection{第十五条\quad协会的下属组织}\label{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}}
 
-协会下属组织的管理人员是委员会的一部分，非管理成员属于会员，不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募和取消由战略官监管和负责。
+协会下属组织的总负责人是委员会的一部分，负责人属于核心会员，其余属于会员而不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募等事宜由需由战略官监管。
 
 \begin{longtable}[]{@{}ll@{}}
 \toprule()
@@ -377,7 +377,7 @@
 \hypertarget{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}{%
 \subsubsection{第二十四条\quad会员投稿}\label{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}}
 
-会员的投稿作品和对应成果完全属于会员本人所有\footnote{包括委员会成员的任何作品}，会员可以提交相关作品\footnote{属于自己的、任何与协会宗旨相关的作品}到委员会的运营部\footnote{信宣部发布的作品也需由运营部审核}，协会将拥有按照会员意愿使用和发布的权利，并配合会员转载或公开发布作品\footnote{通常是校内媒体、公众号或网站等}。
+会员的投稿作品和对应成果完全属于会员本人所有\footnote{包括委员会内部成员的任何作品}，会员可以提交相关作品\footnote{属于自己的、任何与协会宗旨相关的作品}到委员会的运营部\footnote{信宣部发布的作品也需由运营部审核}，协会将拥有按照会员意愿使用和发布的权利，并配合会员转载或公开发布作品\footnote{通常是校内媒体、公众号或网站等}。
 
 \hypertarget{ux7b2cux4e8cux5341ux4e09ux6761-ux5173ux4e8eux672cux7ae0ux7a0b}{%
 \subsubsection{第二十五条\quad关于章程}\label{ux7b2cux4e8cux5341ux4e09ux6761-ux5173ux4e8eux672cux7ae0ux7a0b}}
