--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -9,6 +9,8 @@
 \usepackage{iftex}
 \usepackage{setspace}
 \usepackage{engord}
+\usepackage{graphicx}
+\usepackage{epstopdf}
 \ifPDFTeX
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
@@ -63,10 +65,16 @@
 \title{{\Huge{\textbf{华南师范大学软件协会章程}}}\\{\rm Articles of association \& By-laws \engordnumber{1} edition}}
 
 \begin{document}
+
+\begin{figure}[]
+\centering
+\includegraphics[scale=0.5]{images/logo.pdf}
+\end{figure}
+
 \maketitle
 
+\newpage
 \tableofcontents
-
 \newpage
 
 \hypertarget{ux7b2cux4e00ux7ae0-ux603bux5219}{%
@@ -264,7 +272,7 @@
 \end{longtable}
 
 \hypertarget{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}{%
-\subsubsection{第十五条\quad协会的下属组织}\label{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}}
+\subsubsection{第十五条\quad协会下属组织}\label{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}}
 
 协会下属组织的总负责人是委员会的一部分，负责人属于核心会员，其余属于会员而不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募等事宜由需由战略官监管。
 
