修改下属机构职员人数定义

--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -179,11 +179,11 @@
 \textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关职责举例} \\
 \midrule()
 \endhead
-\textbf{CEO} & 会长 & 委员会 & \(1\) &
+\textbf{CEO} & 会长 & 委员会 & 1 &
 负责协会与校团委联系和任务交接、监管协会事务 \\
-\textbf{XEO} & 副会长 & 委员会 & \(1\textasciitilde 3\) &
+\textbf{XEO} & 副会长 & 委员会 & 1\textasciitilde 3 &
 负责联系、领导、协助、传递和交接协会下属机构 \\
-\textbf{XSO} & 战略官 & 委员会 & \(1\textasciitilde 3\) &
+\textbf{XSO} & 战略官 & 委员会 & 1\textasciitilde 3 &
 负责协会整体发展、多方合作、监管协会下属组织 \\
 \bottomrule()
 \end{longtable}
@@ -213,25 +213,25 @@
 \textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关职责举例} \\
 \midrule()
 \endhead
-\textbf{CTO} & 技术 & 技术部 & \(2\) &
+\textbf{CTO} & 技术 & 技术部 & 2 &
 领导技术部；负责协会软硬件相关技术和设施搭建与维护 \\
-\textbf{CIO} & 信息 & 技术部 & \(1\) &
+\textbf{CIO} & 信息 & 技术部 & 1\textasciitilde 2 &
 负责调查新技术、技术分享会、讲座和其他 IT 任务或活动 \\
-\textbf{COO} & 运营 & 运营部 & \(1\) & 领导运营部；负责各种 IT
+\textbf{COO} & 运营 & 运营部 & 1\textasciitilde 2 & 领导运营部；负责各种 IT
 技术活动的实施和组织开展事务 \\
-\textbf{CFO} & 财务 & 运营部 & \(1\) &
+\textbf{CFO} & 财务 & 运营部 & 1\textasciitilde 2 &
 负责协会财务和固定资产、校资源的保管、申请和审计等 \\
-\textbf{CHO} & 人资 & 运营部 & \(1\) &
+\textbf{CHO} & 人资 & 运营部 & 1\textasciitilde 2 &
 负责协会内所有人员信息管理、联系、记录奖惩和贡献等 \\
-\textbf{CMO} & 市场 & 信宣部 & \(1\) &
+\textbf{CMO} & 市场 & 信宣部 & 1\textasciitilde 2 &
 领导信宣部；负责协会招新、各种协会事宜的记录和宣传 \\
-\textbf{CDO} & 设计 & 信宣部 & \(1\) &
+\textbf{CDO} & 设计 & 信宣部 & 1\textasciitilde 2 &
 负责软协招新宣传物料设计、LOGO、活动海报、媒体等 \\
 \bottomrule()
 \end{longtable}
 }
 其中，CTO
-设正职一名，副职一名。每个领导者为对应部门的部长，部门的实习工作人员受对应领导者管理。技术部、运营部和信宣部的部长可根据实际情况另外安排职务和设置其他执行人员。
+设正职一名、副职一名，其它职位一般不设副职。领导者为对应部门的部长，管理和培养实习工作人员。技术部、运营部和信宣部的部长可根据实际情况另外安排职务和设置其他执行人员。
 
 \hypertarget{ux7b2cux5341ux4e09ux6761-ux59d4ux5458ux4f1aux7684ux6743ux5229ux548cux4e49ux52a1}{%
 \subsubsection{第十三条\quad委员会的权利和义务}\label{ux7b2cux5341ux4e09ux6761-ux59d4ux5458ux4f1aux7684ux6743ux5229ux548cux4e49ux52a1}}
@@ -262,11 +262,11 @@
 \textbf{部门名} & \textbf{职务名} & \textbf{人数} & \textbf{职责} \\
 \midrule()
 \endhead
-技术部 & 实习工作人员 & \(2\textasciitilde 5\) &
+技术部 & 实习工作人员 & 2\textasciitilde 5 &
 好奇、探索、主动学习和完成任务 \\
-运营部 & 实习工作人员 & \(2\textasciitilde 5\) &
+运营部 & 实习工作人员 & 2\textasciitilde 5 &
 好奇、探索、主动学习和完成任务 \\
-信宣部 & 实习工作人员 & \(2\textasciitilde 5\) &
+信宣部 & 实习工作人员 & 2\textasciitilde 5 &
 好奇、探索、主动学习和完成任务 \\
 \bottomrule()
 \end{longtable}
