--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -61,7 +61,7 @@
   hidelinks}
 
 \author{软件协会委员会}
-\date{2022/8/18}
+\date{2022/8/19}
 \title{{\Huge{\textbf{华南师范大学软件协会章程}}}\\{\rm Articles of association \& By-laws \engordnumber{1} edition}}
 
 \begin{document}
@@ -83,7 +83,7 @@
 \hypertarget{ux7b2cux4e00ux6761-ux5173ux4e8eux534fux4f1a}{%
 \subsubsection{第一条\quad关于协会}\label{ux7b2cux4e00ux6761-ux5173ux4e8eux534fux4f1a}}
 
-华南师范大学软件协会（下简称``软件协会''\,``协会''``SoCoding''），是由华南师大学生中的软硬件技术爱好者\footnote{软件技术（例如编程、产品和测试）和硬件技术（计算机硬件、单片机、数码等）}自发组建的，接受校党委的领导和校团委、软件学院的指导，以技术和兴趣为导向的自由\footnote{反对任何官僚主义和形式主义，由所有会员对协会负责}学术组织。
+华南师范大学软件协会（下简称``软件协会''\,``软协''\,``协会''\,``SoCoding''），是由华南师大学生中的软硬件技术爱好者\footnote{软件技术（例如编程、产品和测试）和硬件技术（计算机硬件、单片机、数码等）}自发组建的，接受校党委的领导和校团委、软件学院的指导，以技术和兴趣为导向的自由\footnote{反对任何官僚主义和形式主义，由所有会员对协会负责}学术组织。
 
 \hypertarget{ux7b2cux4e8cux6761-ux534fux4f1aux5b97ux65e8}{%
 \subsubsection{第二条\quad协会宗旨}\label{ux7b2cux4e8cux6761-ux534fux4f1aux5b97ux65e8}}
@@ -169,21 +169,21 @@
 \hypertarget{ux7b2cux5341ux4e00ux6761-ux59d4ux5458ux4f1aux7ec4ux7ec7ux7ed3ux6784}{%
 \subsubsection{第十一条\quad委员会的组织架构}\label{ux7b2cux5341ux4e00ux6761-ux59d4ux5458ux4f1aux7ec4ux7ec7ux7ed3ux6784}}
 
-委员会设会长一名、副会长一至三名，负责协会日常事务；设协会发展小组成员一至六名，负责协会发展和协会下属组织的管理。委员会对会员代表大会负责。委员会会长任期一年，
+委员会设会长一名、副会长一至三名，负责协会日常事务；设协会发展小组（发展组）成员一至三名，负责协会发展和协会下属组织的管理。委员会对会员代表大会负责。委员会会长任期一年，
 一般不得连任，特殊情况下最多可连任一届。
 
 {
 \small
 \begin{longtable}[]{@{}lllll@{}}
 \toprule()
-\textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关职责举例} \\
+\textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关事务举例} \\
 \midrule()
 \endhead
 \textbf{CEO} & 会长 & 委员会 & 1 &
 负责协会与校团委联系和任务交接、监管协会事务 \\
 \textbf{XEO} & 副会长 & 委员会 & 1\textasciitilde 3 &
 负责联系、领导、协助、传递和交接协会下属机构 \\
-\textbf{XSO} & 战略官 & 委员会 & 1\textasciitilde 3 &
+\textbf{XSO} & 战略官 & 发展组 & 1\textasciitilde 3 &
 负责协会整体发展、多方合作、监管协会下属组织 \\
 \bottomrule()
 \end{longtable}
@@ -194,23 +194,23 @@
 \hypertarget{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}{%
 \subsubsection{第十二条\quad委员会的下属机构}\label{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}}
 
-委员会下属机构是委员会的一部分。委员会下设技术部、运营部、信宣部。
+委员会下属机构是委员会的一部分。委员会下设技术部、运营部和信宣部。
 
 \begin{itemize}
     \item \textbf{技术部}\quad负责维护和开发协会所管理的服务器和其他软硬件设施，开发和实现新的软件需求、举办技术相关技术分享和培训；
-    \item \textbf{运营部}\quad负责计划和开展协会日常活动、校企合作，以及协会资产和人资管理等；
+    \item \textbf{运营部}\quad负责计划和开展协会日常活动、校企合作，以及管理协会资产和人资等；
     \item \textbf{信宣部}\quad负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、协会招新和其他宣传物料。
 \end{itemize}
 
-技术部、运营部、信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
+技术部、运营部和信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
 
-技术部、运营部、信宣部包含以下执行人员，并负责相关事务。
+技术部、运营部和信宣部包含以下执行人员，并负责相关事务。
 
 {
 \footnotesize
 \begin{longtable}[]{@{}lllll@{}}
 \toprule()
-\textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关职责举例} \\
+\textbf{代号} & \textbf{职务名} & \textbf{所属} & \textbf{人数} & \textbf{相关事务举例} \\
 \midrule()
 \endhead
 \textbf{CTO} & 技术 & 技术部 & 2 &
@@ -231,7 +231,7 @@
 \end{longtable}
 }
 其中，CTO
-设正职一名、副职一名，其它职位一般不设副职。领导者为对应部门的部长，管理和培养实习工作人员。技术部、运营部和信宣部的部长可根据实际情况另外安排职务和设置其他执行人员。
+设正职一名、副职一名，其它职位一般不设副职。技术部、运营部和信宣部还需负责管理和培养部门内的实习工作人员，根据实际情况为实习工作人员安排职务和设置执行人员。
 
 \hypertarget{ux7b2cux5341ux4e09ux6761-ux59d4ux5458ux4f1aux7684ux6743ux5229ux548cux4e49ux52a1}{%
 \subsubsection{第十三条\quad委员会的权利和义务}\label{ux7b2cux5341ux4e09ux6761-ux59d4ux5458ux4f1aux7684ux6743ux5229ux548cux4e49ux52a1}}
@@ -255,11 +255,11 @@
 \hypertarget{ux7b2cux5341ux56dbux6761-ux5b9eux4e60ux5de5ux4f5cux4ebaux5458}{%
 \subsubsection{第十四条\quad实习工作人员}\label{ux7b2cux5341ux56dbux6761-ux5b9eux4e60ux5de5ux4f5cux4ebaux5458}}
 
-实习工作人员属于协会核心成员，不属于委员会。技术部、运营部和信宣部各包含若干实习工作人员，负责对应部门的工作事宜。
+实习工作人员属于协会核心会员，不属于委员会。技术部、运营部和信宣部各包含若干实习工作人员，负责对应部门的工作事宜。
 
 \begin{longtable}[]{@{}llll@{}}
 \toprule()
-\textbf{部门名} & \textbf{职务名} & \textbf{人数} & \textbf{职责} \\
+\textbf{部门名} & \textbf{职务名} & \textbf{人数} & \textbf{事务} \\
 \midrule()
 \endhead
 技术部 & 实习工作人员 & 2\textasciitilde 5 &
@@ -274,7 +274,7 @@
 \hypertarget{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}{%
 \subsubsection{第十五条\quad协会下属组织}\label{ux7b2cux5341ux4e94ux6761-ux534fux4f1aux4e0bux5c5eux7ec4ux7ec7}}
 
-协会下属组织的总负责人是委员会的一部分，负责人属于核心会员，其余属于会员而不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募等事宜由需由战略官监管。
+协会下属组织的总负责人是委员会的一部分，负责人属于核心会员，其余属于会员而不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募等事宜需由战略官监管。
 
 \begin{longtable}[]{@{}ll@{}}
 \toprule()
@@ -286,7 +286,7 @@
 \bottomrule()
 \end{longtable}
 
-委员会成员可以无条件参与下属组织。
+协会核心会员可以无条件参与下属组织。
 
 \hypertarget{ux7b2cux56dbux7ae0-ux8d22ux52a1ux5236ux5ea6}{%
 \section{第四章\quad财务制度}\label{ux7b2cux56dbux7ae0-ux8d22ux52a1ux5236ux5ea6}}
@@ -299,7 +299,7 @@
 \item
   协会财务工作由委员会和运营部财务负责人(CFO)协调和负责，接受会员和学校上级单位的监督和质询；
 \item
-  相关负责人应当根据社团运营情况和学校相关规定，建立独立而透明的会计、审计制度；
+  相关负责人应当根据协会运营情况和学校相关规定，建立独立而透明的会计和审计制度；
 \item
   财务工作应当完全透明，相关负责人有详尽记录财务使用情况并定期公开发表财务报告的义务；
 \item
@@ -316,7 +316,7 @@
 \item
   校党委、团委和学院等上级部门提供的活动经费；
 \item
-  社团会员自筹的活动经费；
+  协会会员自筹的活动经费；
 \item
   企业或其他机构赞助；
 \item
@@ -325,7 +325,7 @@
   捐赠。
 \end{enumerate}
 
-协会不向会员收取任何形式的会费\footnote{不收取加入协会的费用，不收取例行活动的参与费用}。
+协会不向会员收取任何形式的会费\footnote{不收取加入协会的费用，不收取协会活动的参与费用}。
 
 \hypertarget{ux7b2cux5341ux516bux6761-ux7ecfux8d39ux8fd0ux7528}{%
 \subsubsection{第十八条\quad经费运用}\label{ux7b2cux5341ux516bux6761-ux7ecfux8d39ux8fd0ux7528}}
@@ -335,7 +335,7 @@
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  举办经委员会一致同意的社团活动\footnote{包括活动使用的物资、劳务、信息、交通、食物等费用}；
+  举办经委员会一致同意的协会活动\footnote{包括活动使用的物资、劳务、信息、交通、食物等费用}；
 \item
   协会网络服务器的硬件和软件维护；
 \item
@@ -370,9 +370,9 @@
 \hypertarget{ux7b2cux4e8cux5341ux4e00ux6761-ux7ec8ux6b62ux6761ux4ef6}{%
 \subsubsection{第二十二条\quad协会终止条件}\label{ux7b2cux4e8cux5341ux4e00ux6761-ux7ec8ux6b62ux6761ux4ef6}}
 
-协会运营出现严重困难时，委员会可以向会员代表大会提出终止协议并要求社团自行解散。经会员代表大会
+协会运营出现严重困难时，委员会可以向会员代表大会提出终止协议并要求协会自行解散。经会员代表大会
 \(6/7\)
-多数表决通过和社团指导教师同意，并由校团委批准执行后，启动终止程序。终止程序由会员代表大会选举的特别委员会执行。
+多数表决通过和协会指导教师同意，并由校团委批准执行后，启动终止程序。终止程序由会员代表大会选举的特别委员会执行。
 
 \hypertarget{ux7b2cux4e8cux5341ux4e8cux6761-ux7ec8ux6b62ux540eux8d22ux4ea7ux5904ux7406}{%
 \subsubsection{第二十三条\quad终止后财产处理}\label{ux7b2cux4e8cux5341ux4e8cux6761-ux7ec8ux6b62ux540eux8d22ux4ea7ux5904ux7406}}
@@ -385,7 +385,7 @@
 \hypertarget{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}{%
 \subsubsection{第二十四条\quad会员投稿}\label{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}}
 
-会员的投稿作品和对应成果完全属于会员本人所有\footnote{包括委员会内部成员的任何作品}，会员可以提交相关作品\footnote{属于自己的、任何与协会宗旨相关的作品}到委员会的运营部\footnote{信宣部发布的作品也需由运营部审核}，协会将拥有按照会员意愿使用和发布的权利，并配合会员转载或公开发布作品\footnote{通常是校内媒体、公众号或网站等}。
+会员的投稿作品和对应成果完全属于会员本人所有\footnote{包括委员会内部成员的任何作品}，会员可以提交任何作品\footnote{属于自己的，任何与协会宗旨相关的作品}到委员会的运营部\footnote{信宣部发布的作品也需由运营部审核}，协会将拥有按照会员意愿使用和发布的权利，并配合会员转载或公开发布作品\footnote{通常是校内媒体、公众号或网站等}。
 
 \hypertarget{ux7b2cux4e8cux5341ux4e09ux6761-ux5173ux4e8eux672cux7ae0ux7a0b}{%
 \subsubsection{第二十五条\quad关于章程}\label{ux7b2cux4e8cux5341ux4e09ux6761-ux5173ux4e8eux672cux7ae0ux7a0b}}
