--- a/md/章程.md
+++ b/md/章程.md
@@ -3,30 +3,35 @@
 <center>Articles of association & By-laws 1<sup>st</sup> edition</center>
 
 <div style="page-break-after:always;"></div>
+[TOC]
+<div style="page-break-after:always;"></div>
 
-## 第一章 总则
+
+## 第一章 协会总则
 
 ### 第一条 关于协会
 
-华南师范大学软件协会（下简称“软件协会”“协会”或“SoCoding”），是由华南师大学生中的软硬件技术爱好者[^1]自发组建的，接受校党委的领导和校团委、软件学院的指导，以技术和兴趣为导向的自由[^2]学术组织。
+华南师范大学软件协会（下简称“软件协会”“软协”“协会”或“SoCoding”），是由华南师大学生中的软硬件技术爱好者自发组建的，接受校党委的领导和校团委、软件学院的指导，以技术和兴趣为导向的自由学术组织。
 
 ### 第二条 协会宗旨
 
 软件协会的宗旨是：
 
-1. 以服务在校师生为根本，以回馈开源社区为愿景，为开源[^3]事业的发展作出贡献；
-2. 关注前沿的计算机软硬件和互联网相关行业，探索相关技术，并输出内容[^4]；
+
+1. 以服务在校师生为根本，以回馈开源社区为愿景，为开源事业的发展作出贡献；
+2. 关注前沿的计算机软硬件和互联网相关行业，探索相关技术，并输出内容；
 3. 营造优秀的计算机软硬件学术氛围，为爱好者提供交流和学习的平台。
 
-## 第二章 会员
+
+## 第二章 协会会员
 
 ### 第三条 加入协会
 
-凡赞成本章程，对软件协会有一定了解并有志于推动协会发展的华南师范大学在校学生[^5]，向协会委员会任意一个成员提出申请、提交有效身份信息和联系方式后，即可成为协会会员。
+凡赞成本章程，对软件协会有一定了解并有志于推动协会发展的华南师范大学在校学生，向协会委员会任意一个成员提出申请、提交有效身份信息和联系方式后，即可成为协会会员。
 
 ### 第四条 退出协会
 
-会员毕业或退学后， 自动失去会员资格，会员也可向任意一个委员会成员提出申请后退会。严重违反协会相关规定，或受到学校、学院处分的会员，协会委员会有权利在公告后撤销其会员资格。
+会员毕业或退学后，自动失去会员资格，会员也可向任意一个委员会成员提出申请后退会。严重违反协会相关规定，或受到学校、学院处分的会员，协会委员会有权利在公告后撤销其会员资格。
 
 ### 第五条 指导教师
 
@@ -34,9 +39,9 @@
 
 ### 第六条 核心会员
 
-协会核心会员是在委员会领导下，参与协会管理、发展和执行工作的协会会员。加入技术部、运营部或信宣部其中至少一部可成为核心会员；协会委员会成员自动成为核心会员；协会下属组织[^6]的相关负责人属于核心会员。
+协会核心会员是在委员会领导下，参与协会管理、发展和执行工作的协会会员。加入技术部、运营部或信宣部可成为核心会员；协会委员会成员自动成为核心会员；协会下属组织的相关负责人属于核心会员。
 
-## 第三章 组织与管理
+## 第三章 组织管理
 
 ### 第七条 管理制度
 
@@ -54,19 +59,21 @@
 
 凡参加会员代表大会的会员均自动成为会员代表大会代表。会员代表大会中的每一个代表均有以下职责：
 
+
 1. 审议会员资格；
 2. 选举和罢免委员会成员；
 3. 制定和修改协会章程；
 4. 决定协会的活动方针和任务；
 5. 决定其他重大事项。 
 
+
 会员代表大会闭会期间，由大会选举产生的委员会代为行使职权。
 
 ### 第十一条 委员会组织结构
 
-委员会设会长一名、副会长一至三名，负责协会日常事务；设协会发展小组成员一至六名，负责协会发展和协会下属组织的管理。委员会对会员代表大会负责。委员会会长任期一年， 一般不得连任，特殊情况下最多可连任一届。
+委员会设会长一名、副会长一至三名，负责协会日常事务；设协会发展小组（发展组）成员一至三名，负责协会发展和协会下属组织的管理。委员会对会员代表大会负责。委员会会长任期一年，一般不得连任，特殊情况下最多可连任一届。
 
-| 职务代号  | 职务名 | 所属   | 人数                 | 职责                                         |
+| 代号  | 职务名 | 所属   | 人数                 | 相关事务举例                                         |
 | :-------: | ------ | ------ | -------------------- | :------------------------------------------- |
 | **`CEO`** | 会长   | 委员会 | $1$                  | 负责协会与校团委联系和任务交接、监管协会事务 |
 | **`XEO`** | 副会长 | 委员会 | $1\textasciitilde 3$ | 负责联系、领导、协助、传递和交接协会下属机构 |
@@ -76,27 +83,32 @@
 
 ### 第十二条 委员会下属机构
 
-委员会下属机构是委员会的一部分。委员会下设技术部、运营部、信宣部。技术部负责维护和开发协会所管理的服务器和其他软硬件设施，开发和实现新的软件需求、举办技术相关技术分享和培训；运营部负责计划和开展协会日常活动、校企合作，以及协会资产和人资管理等；信宣部负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、协会招新和其他宣传物料。
+委员会下属机构是委员会的一部分。委员会下设技术部、运营部和信宣部。
 
-技术部、运营部、信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
+- **技术部**  负责维护和开发协会所管理的服务器和其他软硬件设施，开发和实现新的软件需求、举办技术相关技术分享和培训；
+- **运营部**  负责计划和开展协会日常活动、校企合作，以及管理协会资产和人资等；
+- **信宣部**  负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、协会招新和其他宣传物料。
 
-技术部、运营部、信宣部包含以下执行人员，并负责相关事务。
+技术部、运营部和信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
 
-| 职务代号  | 职务名 | 所属   | 人数 | 职责                                                 |
+技术部、运营部和信宣部包含以下执行人员，并负责相关事务。
+
+| 代号  | 职务名 | 所属   | 人数 | 相关事务举例                                                 |
 | :-------: | ------ | ------ | ---- | :--------------------------------------------------- |
 | **`CTO`** | 技术   | 技术部 | $2$  | 领导技术部；负责协会软硬件相关技术和设施搭建与维护   |
-| **`CIO`** | 信息   | 技术部 | $1$  | 负责调查新技术、技术分享会、讲座和其他 IT 任务或活动 |
-| **`COO`** | 运营   | 运营部 | $1$  | 领导运营部；负责各种 IT 技术活动的实施和组织开展事务 |
-| **`CFO`** | 财务   | 运营部 | $1$  | 负责协会财务和固定资产、校资源的保管、申请和审计等   |
-| **`CHO`** | 人资   | 运营部 | $1$  | 负责协会人员联系、管理和记录成员对协会的贡献情况     |
-| **`CMO`** | 市场   | 信宣部 | $1$  | 领导市场部；负责协会招新、各种协会事宜的记录和宣传   |
-| **`CDO`** | 设计   | 信宣部 | $1$  | 负责软协招新宣传物料设计、LOGO、活动海报、媒体等     |
+| **`CIO`** | 信息   | 技术部 | $1\textasciitilde 2$ | 负责调查新技术、技术分享会、讲座和其他 IT 任务或活动 |
+| **`COO`** | 运营   | 运营部 | $1\textasciitilde 2$ | 领导运营部；负责各种 IT 技术活动的实施和组织开展事务 |
+| **`CFO`** | 财务   | 运营部 | $1\textasciitilde 2$ | 负责协会财务和固定资产、校资源的保管、申请和审计等   |
+| **`CHO`** | 人资   | 运营部 | $1\textasciitilde 2$ | 负责协会内所有人员信息管理、联系、记录奖惩和贡献等     |
+| **`CMO`** | 市场   | 信宣部 | $1\textasciitilde 2$ | 领导信宣部；负责协会招新、各种协会事宜的记录和宣传   |
+| **`CDO`** | 设计   | 信宣部 | $1\textasciitilde 2$ | 负责软协招新宣传物料设计、LOGO、活动海报、媒体等     |
 
-其中，CTO 设正职一名，副职一名。每个领导者为对应部门的部长，部门的实习工作人员受对应领导者管理。技术部、运营部和信宣部的部长可根据实际情况另外安排职务和设置其他执行人员。
+其中，CTO 设正职一名、副职一名，其它职位一般不设副职。技术部、运营部和信宣部还需负责管理和培养部门内的实习工作人员，根据实际情况为实习工作人员安排职务和设置执行人员。
 
 ### 第十三条 委员会的权利和义务
 
 委员会在会员代表大会的委托下代为行使以下权利和义务：
+
 
 1. 组织会员代表大会；
 2. 考核和登记新会员；
@@ -104,11 +116,12 @@
 4. 决定协会的活动方针和任务；
 5. 决定其他重大事项。 
 
+
 ### 第十四条 实习工作人员
 
-实习工作人员属于协会核心成员，不属于委员会。技术部、运营部和信宣部各包含若干实习工作人员，负责对应部门的工作事宜。
+实习工作人员属于协会核心会员，不属于委员会。技术部、运营部和信宣部各包含若干实习工作人员，负责对应部门的工作事宜。
 
-| 部门   | 职务名       | 人数                 | 职责                           |
+| 部门名   | 职务名       | 人数                 | 事务                           |
 | ------ | ------------ | -------------------- | ------------------------------ |
 | 技术部 | 实习工作人员 | $2\textasciitilde 5$ | 好奇、探索、主动学习和完成任务 |
 | 运营部 | 实习工作人员 | $2\textasciitilde 5$ | 好奇、探索、主动学习和完成任务 |
@@ -116,34 +129,37 @@
 
 ### 第十五条 协会下属组织
 
-协会下属组织的管理人员是委员会的一部分，非管理成员属于软件协会会员，不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募和取消由战略官监管和负责。
+协会下属组织的总负责人是委员会的一部分，负责人属于核心会员，其余属于会员而不属于委员会。协会下属组织包括：香农先修班、椰风游戏开发社。协会下属组织内部自治，成员招募等事宜需由战略官监管。
 
 | 下属组织名     | 描述                                         |
 | :------------- | :------------------------------------------- |
 | 香农先修班     | 软件协会下属信息技术、计算机算法和竞赛研究班 |
 | 椰风游戏开发社 | 软件协会下属的游戏、多媒体和交互技术兴趣社团 |
 
+协会核心会员可以无条件参与所有下属组织。
+
 ## 第四章 财务制度
 
 ### 第十六条 财务政策
 
+
 1. 协会财务工作由委员会和运营部财务负责人(CFO)协调和负责，接受会员和学校上级单位的监督和质询； 
-
 2. 相关负责人应当根据社团运营情况和学校相关规定，建立独立而透明的会计、审计制度；
-
 3. 财务工作应当完全透明，相关负责人有详尽记录财务使用情况并定期公开发表财务报告的义务； 
-
 4. 对于社会捐款，捐款人有限制捐款用途的权利，有监督和质询捐款使用情况的权利。
+
 
 ### 第十七条 经费来源
 
 协会的资金来源包括：
 
+
 1. 校党委、团委和学院等上级部门提供的活动经费；
 2. 社团会员自筹的活动经费；
 3. 企业或其他机构赞助；
-4. 课程、讲座费用[^7]；
+4. 课程、讲座费用；
 5. 捐赠。
+
 
 协会不向会员收取任何形式的会费。
 
@@ -151,48 +167,44 @@
 
 协会的经费和捐款，除上级单位和捐款人特殊要求的，不得用于下列用途之外的其他用途：
 
-1. 举办经委员会一致同意的社团活动[^8]；
+
+1. 举办经委员会一致同意的社团活动；
 2. 协会网络服务器的硬件和软件维护；
 3. 购置供全体会员使用的福利设施。
+
 
 为方便协会活动经费和捐款的运作，委员会可以指定值得信任的个人或第三方机构代为保管经费。在保护相关人员的个人隐私的前提下，应当公开相关账户（包括银行账户、网上支付平台账户）的信息，以便监管和审查。
 
 ### 第十九条 财务报告
 
-协会委员会和财务负责人每学期应至少在协会社交群、官方网站等地方公开发布一次财务报告。 协会财务工作必须透明，接受会员或学校上级单位监督及质询。协会财务负责人(CFO)对协会整体财务行为负责。
+协会委员会和财务负责人每学期应至少在协会社交群、官方网站等地方公开发布一次财务报告。协会财务工作必须透明，接受会员或学校上级单位监督及质询。协会财务负责人(CFO)对协会整体财务行为负责。
 
 ## 第五章 协会章程
 
 ### 第二十条 协会章程修改
 
-本章程的修改须经由会员代表大会 $2/3$ 多数表决通过、并由协会委员会执行生效。
+本章程的修改须经由会员代表大会 $2/3$ 多数表决通过，并由协会委员会执行生效。
+
+### 第二十一条 遵守协会章程
+
+所有协会成员需要知悉本章程，并遵守章程规定。
 
 ## 第六章 终止程序
 
-### 第二十一条 终止条件
+### 第二十二条 终止条件
 
-协会运营出现严重困难时，委员会可以向会员代表大会提出终止协议并要求社团自行解散。经会员代表大会 $6/7$ 多数表决通过和社团指导教师同意，并由校团委批准执行后，启动终止程序。终止程序由会员代表大会选举的特别委员会执行。
+协会运营出现严重困难时，委员会可以向会员代表大会提出终止协议并要求协会自行解散。经会员代表大会 $6/7$ 多数表决通过和协会指导教师同意，并由校团委批准执行后，启动终止程序。终止程序由会员代表大会选举的特别委员会执行。
 
-###  第二十二条 终止后财产处理
+###  第二十三条 终止后财产处理
 
-协会终止运作后，将未使用的捐款退还捐款人。有归属的财产返还归属人，其余无归属的遗留财产由软件学院代为处理。
+协会终止运作后，将未使用的捐款退还捐款人。有归属的财产返还归属人，其余无归属的遗留财产由校团委或软件学院代为处理。
 
 ## 第七章 附则
 
-### 第二十三条 关于本章程
+### 第二十四条 会员投稿
 
-本章程解释权和修订权归华南师范大学软件协会(SoCoding)会员代表大会所有。
+会员的投稿作品和对应成果完全属于会员本人所有，会员可以提交任何作品到委员会的运营部，协会将拥有按照会员意愿使用和发布的权利，并配合会员转载或公开发布作品。
 
+### 第二十五条 关于章程
 
-
-[^1]: 软件技术（例如编程、产品和测试）和硬件技术（计算机硬件、单片机、数码等）
-[^2]: 反对任何官僚主义和形式主义，由所有会员对协会负责
-[^3]: 所有协会成员应了解开源精神
-[^4]: 包括但不限于公众号图文科普、多媒体作品、软硬件成果等
-[^5]: 在读本科生或研究生，非毕业、休学或退学的学生
-[^6]: 香农先修班、椰风游戏开发社等
-[^7]: 香农先修班需向学生收取课程费用，由协会运营部管理
-[^8]: 包括活动使用的物资、劳务、信息、交通、食物等费用
-
-
-
+本章程解释权和修订权归华南师范大学软件协会会员代表大会所有。
