--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -286,7 +286,7 @@
 \bottomrule()
 \end{longtable}
 
-协会核心会员可以无条件参与下属组织。
+协会核心会员可以无条件参与所有下属组织。
 
 \hypertarget{ux7b2cux56dbux7ae0-ux8d22ux52a1ux5236ux5ea6}{%
 \section{第四章\quad财务制度}\label{ux7b2cux56dbux7ae0-ux8d22ux52a1ux5236ux5ea6}}
