--- a/md/章程.md
+++ b/md/章程.md
@@ -76,18 +76,18 @@
 | 代号  | 职务名 | 所属   | 人数                 | 相关事务举例                                         |
 | :-------: | ------ | ------ | -------------------- | :------------------------------------------- |
 | **`CEO`** | 会长   | 委员会 | $1$                  | 负责协会与校团委联系和任务交接、监管协会事务 |
-| **`XEO`** | 副会长 | 委员会 | $1\textasciitilde 3$ | 负责联系、领导、协助、传递和交接协会下属机构 |
+| **`XEO`** | 副会长 | 委员会 | $1\textasciitilde 3$ | 负责联系、领导、协助、传递和交接协会下属部门 |
 | **`XSO`** | 战略官 | 委员会 | $1\textasciitilde 3$ | 负责协会整体发展、多方合作、监管协会下属组织 |
 
 其中 XSO 可以由 CEO 或 XEO 兼任。
 
-### 第十二条 委员会下属机构
+### 第十二条 委员会下属部门
 
-委员会下属机构是委员会的一部分。委员会下设技术部、运营部和信宣部。
+委员会下属部门是委员会的一部分。委员会下设技术部、运营部和信宣部。
 
 - **技术部**  负责维护和开发协会所管理的服务器和其他软硬件设施，开发和实现新的软件需求、举办技术相关技术分享和培训；
-- **运营部**  负责计划和开展协会日常活动、校企合作，以及管理协会资产和人资等；
-- **信宣部**  负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、协会招新和其他宣传物料。
+- **运营部**  负责计划和开展协会日常活动、校企合作，协会招新、换届以及管理协会资产和人员等；
+- **信宣部**  负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、招新和其他宣传物料。
 
 技术部、运营部和信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
 
