--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -182,7 +182,7 @@
 \textbf{CEO} & 会长 & 委员会 & 1 &
 负责协会与校团委联系和任务交接、监管协会事务 \\
 \textbf{XEO} & 副会长 & 委员会 & 1\textasciitilde 3 &
-负责联系、领导、协助、传递和交接协会下属机构 \\
+负责联系、领导、协助、传递和交接协会下属部门 \\
 \textbf{XSO} & 战略官 & 发展组 & 1\textasciitilde 3 &
 负责协会整体发展、多方合作、监管协会下属组织 \\
 \bottomrule()
@@ -192,14 +192,14 @@
 其中 XSO 可以由 CEO 或 XEO 兼任。
 
 \hypertarget{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}{%
-\subsubsection{第十二条\quad委员会的下属机构}\label{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}}
+\subsubsection{第十二条\quad委员会的下属部门}\label{ux7b2cux5341ux4e8cux6761-ux59d4ux5458ux4f1aux4e0bux5c5eux673aux6784}}
 
-委员会下属机构是委员会的一部分。委员会下设技术部、运营部和信宣部。
+委员会下属部门是委员会的一部分。委员会下设技术部、运营部和信宣部。
 
 \begin{itemize}
     \item \textbf{技术部}\quad负责维护和开发协会所管理的服务器和其他软硬件设施，开发和实现新的软件需求、举办技术相关技术分享和培训；
-    \item \textbf{运营部}\quad负责计划和开展协会日常活动、校企合作，以及管理协会资产和人资等；
-    \item \textbf{信宣部}\quad负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、协会招新和其他宣传物料。
+    \item \textbf{运营部}\quad负责计划和开展协会日常活动、校企合作，协会招新、换届以及管理协会资产和人员等；
+    \item \textbf{信宣部}\quad负责记录协会相关活动、摄影摄像、新闻稿、公众号推文、宣传片、海报、招新和其他宣传物料。
 \end{itemize}
 
 技术部、运营部和信宣部包含若干执行人员，负责具体的管理事务。运营部有权利根据实需要从协会会员中选拔技术人员，并有权根据工作表现罢免和调整执行人员。
