--- a/md/章程.md
+++ b/md/章程.md
@@ -45,7 +45,7 @@
 
 ### 第七条 管理制度
 
-协会的组织原则是民主集中制。会员代表大会是协会的最高权力机构；委员会在会员代表大会委托下代为行使大会的部分职权；技术部、运营部和信宣部在委员会的领导下进行协会的管理和运营工作。
+协会的组织原则是民主集中制。会员代表大会是协会的最高权力机构；委员会在会员代表大会委托下代为行使大会的部分职权；技术部、运营部、信宣部和发展组在委员会的领导下进行协会的管理和运营工作。
 
 ### 第八条 会员代表大会
 
