--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -131,7 +131,7 @@
 \hypertarget{ux7b2cux4e03ux6761-ux7ba1ux7406ux5236ux5ea6}{%
 \subsubsection{第七条\quad管理制度}\label{ux7b2cux4e03ux6761-ux7ba1ux7406ux5236ux5ea6}}
 
-协会的组织原则是民主集中制。会员代表大会是协会的最高权力机构；委员会在会员代表大会委托下代为行使大会的部分职权；技术部、运营部和信宣部在委员会的领导下进行协会的管理和运营工作。
+协会的组织原则是民主集中制。会员代表大会是协会的最高权力机构；委员会在会员代表大会委托下代为行使大会的部分职权；技术部、运营部、信宣部和发展组在委员会的领导下进行协会的管理和运营工作。
 
 \hypertarget{ux7b2cux516bux6761-ux4f1aux5458ux4ee3ux8868ux5927ux4f1a}{%
 \subsubsection{第八条\quad会员代表大会}\label{ux7b2cux516bux6761-ux4f1aux5458ux4ee3ux8868ux5927ux4f1a}}
