--- a/md/章程.md
+++ b/md/章程.md
@@ -35,7 +35,7 @@
 
 ### 第五条 指导教师
 
-协会指导教师是协会的特殊成员，协会委员会按照学校相关规定联系和申请指导教师。指导教师不能在协会委员会任职，但享有学校相关规定赋予的权利和义务。
+协会指导教师是协会的特殊成员，协会委员会按照学校相关规定联系和申请指导教师。指导教师不能在协会委员会任职，但享有学校相关规定赋予的权利并履行义务。
 
 ### 第六条 核心会员
 
