--- a/tex/章程.tex
+++ b/tex/章程.tex
@@ -118,7 +118,7 @@
 \hypertarget{ux7b2cux4e94ux6761-ux6307ux5bfcux6559ux5e08}{%
 \subsubsection{第五条\quad指导教师}\label{ux7b2cux4e94ux6761-ux6307ux5bfcux6559ux5e08}}
 
-协会指导教师是协会的特殊成员，协会委员会按照学校相关规定联系和申请指导教师。指导教师不能在协会委员会任职，但享有学校相关规定赋予的权利和义务。
+协会指导教师是协会的特殊成员，协会委员会按照学校相关规定联系和申请指导教师。指导教师不能在协会委员会任职，但享有学校相关规定赋予的权利并履行义务。
 
 \hypertarget{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}{%
 \subsubsection{第六条\quad核心会员}\label{ux7b2cux516dux6761-ux6838ux5fc3ux4f1aux5458}}
